--- a/wp-content/themes/guny/src/scss/base/_type.scss
+++ b/wp-content/themes/guny/src/scss/base/_type.scss
@@ -22,11 +22,19 @@ h5,
 h6 {
   font-family: $font-family-display;
   font-weight: $font-weight-extrablack;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.3;
 }
 
 h1 {
   @include font-size-xxx-large;
+  line-height: 1.1;
 }
 
 h2 {
